Keep Phase 12D auth code compatible with minSdk 26